# reelcast

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.toml
docs/: CONCEPT.md  PLAN.md  TOOLS.md
src/reelcast/: __init__.py  cli.py  config.py  orchestrator.py
src/reelcast/media/: __init__.py  animate.py  cutout.py  render.py  thumbnail.py
src/reelcast/pipeline/: __init__.py  base.py
src/reelcast/pipeline/stages/: __init__.py  compose.py  ideation.py  metadata.py  music.py  publish.py  shorts.py  thumbnail.py  visuals.py
src/reelcast/state/: __init__.py  db.py  models.py
tests/: test_pipeline.py
